<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkBlue">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:alpha=".8"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      android:src="@drawable/recap_match_bg"
      app:layout_constraintBottom_toBottomOf="@+id/world_cup_btn_recap"/>

  <TextView
      android:id="@+id/wc_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/small_margin"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:text="@string/fwc"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/wc_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/xx_small_margin"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:text="Russia 2018"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/small_txt_size"
      app:layout_constraintEnd_toEndOf="@+id/wc_txt"
      app:layout_constraintStart_toStartOf="@+id/wc_txt"
      app:layout_constraintTop_toBottomOf="@+id/wc_txt"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/small_margin"
      android:background="@color/white"
      app:layout_constraintTop_toBottomOf="@+id/wc_location"/>

  <TextView
      android:id="@+id/final_res_word"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/medium_margin"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:text="@string/final_res"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintEnd_toEndOf="@+id/wc_location"
      app:layout_constraintStart_toStartOf="@+id/wc_location"
      app:layout_constraintTop_toBottomOf="@+id/wc_location"/>

  <ImageView
      android:id="@+id/winner_img"
      android:layout_width="@dimen/history_img_width"
      android:layout_height="@dimen/small_view_height"
      android:layout_marginTop="@dimen/small_margin"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="@+id/final_res_word"
      app:layout_constraintStart_toStartOf="@+id/final_res_word"
      app:layout_constraintTop_toBottomOf="@+id/final_res_word"/>

  <TextView
      android:id="@+id/winner_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/small_txt_size"
      app:layout_constraintEnd_toEndOf="@+id/winner_img"
      app:layout_constraintStart_toStartOf="@+id/winner_img"
      app:layout_constraintTop_toBottomOf="@+id/winner_img"/>

  <TextView
      android:id="@+id/winner_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:text="@string/winner"
      android:textAlignment="center"
      android:textColor="@color/yellow_10"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintEnd_toEndOf="@+id/winner_name"
      app:layout_constraintStart_toStartOf="@+id/winner_name"
      app:layout_constraintTop_toBottomOf="@+id/winner_name"/>

  <ImageView
      android:id="@+id/runner_flag"
      android:layout_width="@dimen/history_img_width"
      android:layout_height="@dimen/small_view_height"
      android:layout_marginStart="32dp"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toTopOf="@+id/winner_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/winner_img"/>

  <TextView
      android:id="@+id/runner_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/winner_name"
      app:layout_constraintEnd_toEndOf="@+id/runner_flag"
      app:layout_constraintStart_toStartOf="@+id/runner_flag"
      app:layout_constraintTop_toTopOf="@+id/winner_name"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:text="@string/second"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/winner_txt"
      app:layout_constraintEnd_toEndOf="@+id/runner_name"
      app:layout_constraintStart_toStartOf="@+id/runner_name"
      app:layout_constraintTop_toTopOf="@+id/winner_txt"/>

  <ImageView
      android:id="@+id/third_img"
      android:layout_width="@dimen/history_img_width"
      android:layout_height="@dimen/small_view_height"
      android:layout_marginEnd="32dp"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toBottomOf="@+id/winner_img"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/winner_img"/>

  <TextView
      android:id="@+id/third_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/winner_name"
      app:layout_constraintEnd_toEndOf="@+id/third_img"
      app:layout_constraintStart_toStartOf="@+id/third_img"
      app:layout_constraintTop_toTopOf="@+id/winner_name"/>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:text="@string/third"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/winner_txt"
      app:layout_constraintEnd_toEndOf="@+id/third_name"
      app:layout_constraintStart_toStartOf="@+id/third_name"
      app:layout_constraintTop_toTopOf="@id/winner_txt"/>

  <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/small_margin"
      android:background="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/winner_txt"/>

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/medium_padding"
      android:text="@string/final_match"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/winner_txt"/>

  <ImageView
      android:id="@+id/final_match_first_team_img"
      android:layout_width="@dimen/history_img_width"
      android:layout_height="@dimen/small_view_height"
      android:layout_marginEnd="@dimen/xx_small_margin"
      android:layout_marginTop="@dimen/xx_small_margin"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toStartOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView"/>

  <TextView
      android:id="@+id/final_match_first_team_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/small_margin"
      android:padding="@dimen/small_padding"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/large_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/final_match_first_team_img"
      app:layout_constraintStart_toEndOf="@+id/final_match_first_team_img"
      app:layout_constraintTop_toTopOf="@+id/final_match_first_team_img"/>

  <ImageView
      android:id="@+id/final_match_second_team_img"
      android:layout_width="@dimen/history_img_width"
      android:layout_height="@dimen/small_view_height"
      android:layout_marginStart="@dimen/xx_small_margin"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toBottomOf="@+id/final_match_first_team_img"
      app:layout_constraintStart_toEndOf="@+id/textView"
      app:layout_constraintTop_toTopOf="@+id/final_match_first_team_img"/>

  <TextView
      android:id="@+id/final_match_second_team_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/small_margin"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:textColor="@color/white"
      android:textSize="@dimen/large_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/final_match_first_team_score"
      app:layout_constraintEnd_toStartOf="@+id/final_match_second_team_img"
      app:layout_constraintTop_toTopOf="@+id/final_match_first_team_score"/>

  <TextView
      android:id="@+id/final_match_stadium"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/small_txt_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/final_match_second_team_img"/>

  <TextView
      android:id="@+id/is_final_drawn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="WON BY PENALITIES"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="@+id/final_match_stadium"
      app:layout_constraintStart_toStartOf="@+id/final_match_stadium"
      app:layout_constraintTop_toBottomOf="@+id/final_match_stadium"/>

  <View
      android:id="@+id/view_awards"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="@dimen/small_margin"
      android:background="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/is_final_drawn"/>

  <TextView
      android:id="@+id/single_awards_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:fontFamily="@font/autour_one"
      android:padding="@dimen/small_padding"
      android:text="INDIVIDUAL AWARDS"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/medium_txt_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view_awards"/>

  <ImageView
      android:id="@+id/golden_boot_winner_flag"
      android:layout_width="@dimen/x_small_view_width"
      android:layout_height="@dimen/x_small_view_height"
      android:layout_marginStart="@dimen/small_margin"
      android:layout_marginTop="@dimen/x_small_margin"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/single_awards_txt"/>

  <TextView
      android:id="@+id/golden_boot_winner_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/x_small_margin"
      android:fontFamily="@font/autour_one"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/golden_boot_winner_flag"
      app:layout_constraintStart_toEndOf="@+id/golden_boot_winner_flag"
      app:layout_constraintTop_toTopOf="@+id/golden_boot_winner_flag"/>

  <TextView
      android:id="@+id/golden_boot_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="92dp"
      android:fontFamily="@font/autour_one"
      android:text="@string/golden_bot"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/golden_boot_winner_name"
      app:layout_constraintStart_toEndOf="@+id/golden_boot_winner_name"
      app:layout_constraintTop_toTopOf="@+id/golden_boot_winner_name"/>

  <TextView
      android:id="@+id/golden_boot_scored_goals"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/small_margin"
      android:fontFamily="@font/autour_one"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/golden_boot_winner_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/golden_boot_winner_name"/>

  <ImageView
      android:id="@+id/best_player_winner_flag"
      android:layout_width="@dimen/x_small_view_width"
      android:layout_height="@dimen/x_small_view_height"
      android:layout_marginStart="@dimen/small_margin"
      android:layout_marginTop="@dimen/small_margin"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/golden_boot_winner_flag"/>

  <TextView
      android:id="@+id/best_player_winner_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/x_small_margin"
      android:fontFamily="@font/autour_one"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/best_player_winner_flag"
      app:layout_constraintStart_toEndOf="@+id/best_player_winner_flag"
      app:layout_constraintTop_toTopOf="@+id/best_player_winner_flag"/>

  <TextView
      android:id="@+id/best_player_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:text="@string/best_ply"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/best_player_winner_name"
      app:layout_constraintStart_toStartOf="@+id/golden_boot_txt"
      app:layout_constraintTop_toTopOf="@+id/best_player_winner_name"/>

  <ImageView
      android:id="@+id/gold_glove_winner_flag"
      android:layout_width="@dimen/x_small_view_width"
      android:layout_height="@dimen/x_small_view_height"
      android:layout_marginStart="@dimen/small_margin"
      android:layout_marginTop="@dimen/small_margin"
      android:contentDescription="@null"
      android:scaleType="fitXY"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/best_player_winner_flag"/>

  <TextView
      android:id="@+id/gold_glove_winner_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/x_small_margin"
      android:fontFamily="@font/autour_one"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/gold_glove_winner_flag"
      app:layout_constraintStart_toEndOf="@+id/gold_glove_winner_flag"
      app:layout_constraintTop_toTopOf="@+id/gold_glove_winner_flag"/>

  <TextView
      android:id="@+id/gold_glove_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/autour_one"
      android:text="@string/gold_glove"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="@dimen/x_small_txt_size"
      app:layout_constraintBottom_toBottomOf="@+id/gold_glove_winner_name"
      app:layout_constraintStart_toStartOf="@+id/golden_boot_txt"
      app:layout_constraintTop_toTopOf="@+id/gold_glove_winner_name"/>

  <Button
      android:id="@+id/world_cup_btn_recap"
      android:layout_width="0dp"
      android:layout_height="38dp"
      android:layout_marginEnd="@dimen/xlarge_margin"
      android:layout_marginStart="@dimen/xlarge_margin"
      android:layout_marginTop="@dimen/medium_margin"
      android:background="@drawable/btn_recap_match_bg"
      android:fontFamily="@font/autour_one"
      android:stateListAnimator="@null"
      android:text="@string/cup_best"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/gold_glove_winner_name"
      tools:ignore="UnusedAttribute"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="4dp"
      android:layout_marginTop="@dimen/x_small_margin"
      android:background="@color/darkBlue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/world_cup_btn_recap"/>


</android.support.constraint.ConstraintLayout>
